[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hypod"
authors = [
    { name="Jiseob Kim", email="justjest@gmail.com" },
]
description = "Hypod: A dataclass-based hyperparameter managing system"
keywords = ["hyperparameter", "dataclass", "command-line"]
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version", "dependencies"]

[project.urls]
repository = "https://github.com/delta-func/hypod"

[tool.setuptools.dynamic]
version = {attr = "hypod._version.__version__"}
dependencies = {file = "requirements.txt"}